...
        }

        await AsyncStorage.setItem(Const.TOUCH_ID+user?.id, 'true');
        setActiveDialog(null);

        if(param?.previousScreen !== '' && param?.previousScreen !== null && param?.previousScreen !== 'setting')
            router.replace('/tabs/(tabs)/Chat')
    };

    const enableFaceID = async () => {
        const bio_status = await AsyncStorage.getItem(Const.FACE_ID+user?.id);
        if (bio_status === 'true') {
            Alert.alert('Face ID authentication is already enabled.');
...
                justifyContent: 'flex-end',
                paddingBottom: 24,
            }}
        >
            <View className="w-full max-w-md px-6">
                <View className="bg-gray-50 dark:bg-gray-900 rounded-lg p-6 shadow-md">
                    <Heading className="font-semibold text-2xl text-gray-900 dark:text-gray-100 mb-2">Enable Biometric</Heading>
                    <Text className="text-gray-700 dark:text-gray-300">To enable biometric authentication, please follow the instructions below.</Text>

                    <View className="mt-6 space-y-3 pb-4">
                        <Button onPress={() => setActiveDialog('touchID')}
                            size="md"
                            action="primary"
...
                            <ButtonText className="text-white">Enable Face ID</ButtonText>
                        </Button>

                        <Button size="md"
                            action="primary"
                            className="bg-blue-500" onPress={() => handleSkip()}>
                            <ButtonText className="dark:text-gray-300">Skip</ButtonText>
                        </Button>
                    </View>
                </View>

                {/* Manage Keys Dialog */}
                <AlertDialog isOpen={activeDialog !== null} onClose={() => setActiveDialog(null)} size="md">
...
                                variant="outline"
                                action="secondary"
                                onPress={() => setActiveDialog(null)}
                                size="sm"
                                className="border border-gray-300 dark:border-gray-700 rounded-md py-2 px-4"
                            >
                                <ButtonText>Cancel</ButtonText>
                            </Button>

                        </AlertDialogFooter>
                    </AlertDialogContent>
                </AlertDialog>
            </View>
...
